Slight fixes + CPack & GH Releases

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ cmake_minimum_required(VERSION 3.10)
 project(
   MyProject
   VERSION 1.0.0
-  DESCRIPTION "My Project!"
-  HOMEPAGE_URL "https://github.com/ardabbour/cpp_template"
+  DESCRIPTION "MyProject is a C++ library for adding and subtracting numbers."
+  HOMEPAGE_URL "https://github.com/ardabbour/cpp-template"
   LANGUAGES CXX)
 # ##############################################################################
 
@@ -135,7 +135,6 @@ install(
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   INCLUDES
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 # ##############################################################################
 
 # Create and install cmake helpers
@@ -176,4 +175,14 @@ if(NOT TARGET uninstall)
     COMMAND ${CMAKE_COMMAND} -P
             ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
 endif()
+# ##############################################################################
+
+# Use CPack to create a package
+# ##############################################################################
+set(CPACK_PACKAGE_VENDOR "MyCompany")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY
+    "MyProject is a C++ library for adding and subtracting numbers.")
+set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
+set(CPACK_PACKAGE_CONTACT "ardabbour@gmail.com")
+include(CPack)
 # ##############################################################################
