--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,6 +18,7 @@ jobs:
 
     - name: Prerequisites
       run: |
+        mkdir -p ${{github.workspace}}/prerequisites
         wget --quiet https://github.com/google/googletest/archive/refs/tags/release-1.11.0.tar.gz -O ${{github.workspace}}/prerequisites/googletest.tar.gz
         tar -xvzf ${{github.workspace}}/prerequisites/googletest.tar.gz
         mv ${{github.workspace}}/prerequisites/googletest-release-1.11.0 ${{github.workspace}}/prerequisites/googletest
