--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,10 +19,9 @@ jobs:
     - name: Prerequisites
       run: |
         mkdir -p ${{github.workspace}}/prerequisites
-        wget --quiet https://github.com/google/googletest/archive/refs/tags/release-1.11.0.tar.gz -O ${{github.workspace}}/prerequisites/googletest.tar.gz
-        tar -xvzf ${{github.workspace}}/prerequisites/googletest.tar.gz
-        mv ${{github.workspace}}/prerequisites/googletest-release-1.11.0 ${{github.workspace}}/prerequisites/googletest
-        mkdir -p ${{github.workspace}}/prerequisites/googletest/build && cd ${{github.workspace}}/prerequisites/googletest/build && cmake .. -DCMAKE_BUILD_TYPE=Release && make install
+        wget --quiet https://github.com/google/googletest/archive/refs/tags/release-1.11.0.tar.gz
+        tar -xvzf ${{github.workspace}}/prerequisites/release-1.11.0.tar.gz
+        mkdir -p ${{github.workspace}}/prerequisites/googletest-release-1.11.0/build && cd ${{github.workspace}}/prerequisites/googletest-release-1.11.0/build && cmake .. -DCMAKE_BUILD_TYPE=Release && make install
         rm -rf ${{github.workspace}}/prerequisites
 
     - name: Configure
