--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,6 +23,7 @@ jobs:
         tar -xvzf ${{github.workspace}}/prerequisites/release-1.11.0.tar.gz
         mkdir -p ${{github.workspace}}/prerequisites/googletest-release-1.11.0/build && cd ${{github.workspace}}/prerequisites/googletest-release-1.11.0/build && cmake .. -DCMAKE_BUILD_TYPE=Release && make install
         rm -rf ${{github.workspace}}/prerequisites
+      shell: bash
 
     - name: Configure
       run: |
