--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,9 +24,8 @@ jobs:
         mkdir -p ${{env.PREREQ_PATH}}
         wget --quiet https://github.com/google/googletest/archive/refs/tags/release-1.11.0.tar.gz -O ${{env.PREREQ_PATH}}/googletest.tar.gz
         tar -xvzf ${{env.PREREQ_PATH}}/googletest.tar.gz
-        mv ${{env.PREREQ_PATH}}/googletest-release-1.11.0 ${{env.PREREQ_PATH}}/googletest
-        mkdir -p ${{env.PREREQ_PATH}}/googletest/build
-        cd ${{env.PREREQ_PATH}}/googletest/build
+        mkdir -p ${{env.PREREQ_PATH}}/googletest-release-1.11.0/build
+        cd ${{env.PREREQ_PATH}}/googletest-release-1.11.0/build
         cmake .. -DCMAKE_BUILD_TYPE=Release && make install
         rm -rf ${{env.PREREQ_PATH}}
       shell: bash
