--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -33,9 +33,9 @@ jobs:
     - name: Configure
       run: |
         cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        echo "CMAKE_PROJECT_VERSION_MAJOR CMakeCache.txt | cut -d "=" -f2" >> $VERSION_MAJOR
-        echo "CMAKE_PROJECT_VERSION_MINOR CMakeCache.txt | cut -d "=" -f2" >> $VERSION_MINOR
-        echo "CMAKE_PROJECT_VERSION_PATCH CMakeCache.txt | cut -d "=" -f2" >> $VERSION_PATCH
+        echo "VERSION_MAJOR=$(CMAKE_PROJECT_VERSION_MAJOR CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
+        echo "VERSION_MINOR=$(CMAKE_PROJECT_VERSION_MINOR CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
+        echo "VERSION_PATCH=$(CMAKE_PROJECT_VERSION_PATCH CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
 
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
