include googletest module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,8 +116,10 @@ endif()
 option(BUILD_TESTING "Builds tests with Google Test" ON)
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_TESTING)
   include(CTest)
+  include(GoogleTest)
   find_package(GTest)
   if(GTEST_FOUND)
+    enable_testing()
     add_subdirectory(tests)
   else()
     message("Failed to build the tests because Google Test was not found.")
