grep the command

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -33,9 +33,9 @@ jobs:
     - name: Configure
       run: |
         cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        echo "VERSION_MAJOR=$(echo CMAKE_PROJECT_VERSION_MAJOR CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
-        echo "VERSION_MINOR=$(echo CMAKE_PROJECT_VERSION_MINOR CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
-        echo "VERSION_PATCH=$(echo CMAKE_PROJECT_VERSION_PATCH CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
+        echo "VERSION_MAJOR=$(grep CMAKE_PROJECT_VERSION_MAJOR CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
+        echo "VERSION_MINOR=$(grep CMAKE_PROJECT_VERSION_MINOR CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
+        echo "VERSION_PATCH=$(grep CMAKE_PROJECT_VERSION_PATCH CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
 
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
