--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,13 +15,43 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
-    - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+    - name: Prerequisites
+      run: |
+        sudo apt update
+        sudo apt install doxygen
+      shell: bash
+
+    - name: Configure
+      working-directory: ${{github.workspace}}
+      run: cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      working-directory: ${{github.workspace}}
+      run: |
+        cmake --build build --config ${{env.BUILD_TYPE}}
+        echo "VERSION_MAJOR=$(grep CMAKE_PROJECT_VERSION_MAJOR CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
+        echo "VERSION_MINOR=$(grep CMAKE_PROJECT_VERSION_MINOR CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
+        echo "VERSION_PATCH=$(grep CMAKE_PROJECT_VERSION_PATCH CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
 
     - name: Test
+      working-directory: ${{github.workspace}}
+      run: ctest --test-dir build -C ${{env.BUILD_TYPE}}
+
+    - name: Package
       working-directory: ${{github.workspace}}/build
-      run: ctest -C ${{env.BUILD_TYPE}}
+      run: |
+        cpack -G DEB
+        cpack -G TGZ
+        cpack -G ZIP
+
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      with:
+        tag_name: $VERSION_MAJOR.$VERSION_MINOR.$VERSION_PATCH
+        files: |
+            ${{github.workspace}}/build/*.zip
+            ${{github.workspace}}/build/*.tar.gz
+            ${{github.workspace}}/build/*.deb
