--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,9 +2,9 @@ name: CMake
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 env:
   BUILD_TYPE: Release
@@ -14,44 +14,45 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-    - name: Prerequisites
-      run: |
-        sudo apt update
-        sudo apt install doxygen
-      shell: bash
+      - name: Prerequisites
+        run: |
+          sudo apt update
+          sudo apt install doxygen
+        shell: bash
 
-    - name: Configure
-      working-directory: ${{github.workspace}}
-      run: cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      - name: Configure
+        working-directory: ${{github.workspace}}
+        run: cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
-    - name: Build
-      working-directory: ${{github.workspace}}
-      run: |
-        cmake --build build --config ${{env.BUILD_TYPE}}
-        echo "VERSION_MAJOR=$(grep CMAKE_PROJECT_VERSION_MAJOR CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
-        echo "VERSION_MINOR=$(grep CMAKE_PROJECT_VERSION_MINOR CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
-        echo "VERSION_PATCH=$(grep CMAKE_PROJECT_VERSION_PATCH CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
+      - name: Build
+        working-directory: ${{github.workspace}}
+        run: |
+          cmake --build build --config ${{env.BUILD_TYPE}}
+          echo "VERSION_MAJOR=$(grep CMAKE_PROJECT_VERSION_MAJOR CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
+          echo "VERSION_MINOR=$(grep CMAKE_PROJECT_VERSION_MINOR CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
+          echo "VERSION_PATCH=$(grep CMAKE_PROJECT_VERSION_PATCH CMakeCache.txt | cut -d "=" -f2)" >> $GITHUB_ENV
 
-    - name: Test
-      working-directory: ${{github.workspace}}
-      run: ctest --test-dir build -C ${{env.BUILD_TYPE}}
+      - name: Test
+        working-directory: ${{github.workspace}}
+        run: ctest --test-dir build -C ${{env.BUILD_TYPE}}
 
-    - name: Package
-      working-directory: ${{github.workspace}}/build
-      run: |
-        cpack -G DEB
-        cpack -G TGZ
-        cpack -G ZIP
+      - name: Package
+        working-directory: ${{github.workspace}}/build
+        run: |
+          cpack -G DEB
+          cpack -G TGZ
+          cpack -G ZIP
 
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      with:
-        tag_name: $VERSION_MAJOR.$VERSION_MINOR.$VERSION_PATCH
-        files: |
+      - name: Release
+        if: github.ref == 'refs/heads/main'
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{env.VERSION_MAJOR}}.${{env.VERSION_MINOR}}.${{env.VERSION_PATCH}}
+          files: |
             ${{github.workspace}}/build/*.zip
             ${{github.workspace}}/build/*.tar.gz
             ${{github.workspace}}/build/*.deb
